Initial Work on Config UI Rework

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -230,197 +230,31 @@
   "subsets.rei.roughlyenoughitems.item_groups": "Creative Tabs",
   "_comment": "Config Tooltips",
   "config.roughlyenoughitems.title": "Roughly Enough Items Config",
-  "config.roughlyenoughitems.basics": "Basics",
-  "config.roughlyenoughitems.appearance": "Appearance",
-  "config.roughlyenoughitems.functionality": "Functionality",
-  "config.roughlyenoughitems.advanced": "Advanced",
-  "config.roughlyenoughitems.cheating": "Cheating:",
-  "config.roughlyenoughitems.cheating.when_creative": "During Creative Mode",
-  "config.roughlyenoughitems.favoritesEnabled": "Favorites Enabled:",
-  "config.roughlyenoughitems.reduceMotion": "Reduced Motion:",
-  "config.roughlyenoughitems.keyBindings": "Keybindings",
-  "config.roughlyenoughitems.keyBindings.recipeKeybind": "Show Recipe:",
-  "config.roughlyenoughitems.keyBindings.hideKeybind": "Hide/Show REI:",
-  "config.roughlyenoughitems.keyBindings.usageKeybind": "Show Uses:",
-  "config.roughlyenoughitems.keyBindings.nextPageKeybind": "Next Page:",
-  "config.roughlyenoughitems.keyBindings.previousPageKeybind": "Previous Page:",
-  "config.roughlyenoughitems.keyBindings.focusSearchFieldKeybind": "Focus Search Field:",
-  "config.roughlyenoughitems.keyBindings.copyRecipeIdentifierKeybind": "Copy Recipe Identifier:",
-  "config.roughlyenoughitems.keyBindings.exportImageKeybind": "Export Recipe:",
-  "config.roughlyenoughitems.keyBindings.favoriteKeybind": "Favorite Entry:",
-  "config.roughlyenoughitems.keyBindings.previousScreenKeybind": "Previous Screen:",
-  "config.roughlyenoughitems.cheatingStyle": "Cheating Style:",
-  "config.roughlyenoughitems.cheatingStyle.grab": "Grab",
-  "config.roughlyenoughitems.cheatingStyle.give": "Give",
-  "config.roughlyenoughitems.motion": "Animation / Motion Settings",
-  "config.roughlyenoughitems.motion.configScreenAnimation": "Config Screen Animated:",
-  "config.roughlyenoughitems.motion.creditsScreenAnimation": "Credits Screen Animated:",
-  "config.roughlyenoughitems.motion.favoritesAnimation": "Favorites Animated:",
-  "config.roughlyenoughitems.recipeScreenType": "Recipe Screen Type:",
-  "config.roughlyenoughitems.recipeScreenType.config": "Recipe Screen Type: %s",
-  "config.roughlyenoughitems.recipeScreenType.unset": "Not Set",
-  "config.roughlyenoughitems.recipeScreenType.original": "Default",
-  "config.roughlyenoughitems.recipeScreenType.composite": "Composite",
-  "config.roughlyenoughitems.layout": "Layout",
-  "config.roughlyenoughitems.tooltips": "Tooltips",
-  "config.roughlyenoughitems.accessibility": "Accessibility",
-  "config.roughlyenoughitems.search": "Search",
-  "config.roughlyenoughitems.commands": "Commands",
-  "config.roughlyenoughitems.filtering": "Filtering",
-  "config.roughlyenoughitems.miscellaneous": "Miscellaneous",
-  "config.roughlyenoughitems.miscellaneous.clickableRecipeArrows": "Clickable Recipe Arrows:",
-  "config.roughlyenoughitems.isSubsetsEnabled": "Subsets Enabled:",
-  "config.roughlyenoughitems.allowInventoryHighlighting": "Inventory Highlighting Enabled:",
-  "config.roughlyenoughitems.miscellaneous.renderEntryEnchantmentGlint": "Render Enchantment Glint:",
-  "config.roughlyenoughitems.layout.configButtonLocation": "Config Button Position:",
-  "config.roughlyenoughitems.layout.configButtonLocation.upper": "Upper",
-  "config.roughlyenoughitems.layout.configButtonLocation.lower": "Lower",
-  "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "Merge Displays with Equal Contents:",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "Favorites Add Widget Button:",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "Always Invisible",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "Auto Hide",
-  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "Always Visible",
-  "config.roughlyenoughitems.filteredEntries.selectAll": "Select All",
-  "config.roughlyenoughitems.filteredEntries.selectNone": "Unselect All",
-  "config.roughlyenoughitems.filteredEntries.hide": "Hide Selected",
-  "config.roughlyenoughitems.filteredEntries.show": "Show Selected",
-  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "Load World First!",
-  "config.roughlyenoughitems.accessibility.entrySize": "Entry Size:",
-  "config.roughlyenoughitems.search.asyncSearch": "Async Search:",
-  "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Async Search Partition Size:",
-  "config.roughlyenoughitems.search.patchAsyncThreadCrash": "Patch Async Thread Crash:",
-  "config.roughlyenoughitems.accessibility.useCompactTabs": "Compact Tabs:",
-  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "Compact Tab Arrow Buttons:",
-  "config.roughlyenoughitems.theme": "Appearance Theme:",
-  "config.roughlyenoughitems.theme.dark": "Dark Theme",
-  "config.roughlyenoughitems.theme.light": "Light Theme",
-  "config.roughlyenoughitems.recipeBorder": "Recipe Display Border:",
-  "config.roughlyenoughitems.recipeBorder.lighter": "Lighter",
-  "config.roughlyenoughitems.recipeBorder.default": "Default",
-  "config.roughlyenoughitems.recipeBorder.none": "None",
-  "config.roughlyenoughitems.layout.maxRecipesPerPage": "Maximum Recipes Per Page:",
-  "config.roughlyenoughitems.layout.maxRecipesPageHeight": "Maximum Recipes Page Height:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation": "Entry Panel Position:",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.left": "Left Side",
-  "config.roughlyenoughitems.accessibility.displayPanelLocation.right": "Right Side",
-  "config.roughlyenoughitems.search.tooltipSearch": "Tooltip Search (#):",
-  "config.roughlyenoughitems.search.tagSearch": "Tag Search ($):",
-  "config.roughlyenoughitems.search.identifierSearch": "Identifier Search (*):",
-  "config.roughlyenoughitems.search.modSearch": "Mod Search (@):",
-  "config.roughlyenoughitems.search_mode.always": "Always Enabled",
-  "config.roughlyenoughitems.search_mode.prefix": "While Using Prefix",
-  "config.roughlyenoughitems.search_mode.never": "Always Disabled",
-  "config.roughlyenoughitems.layout.debugRenderTimeRequired": "Entry Panel Debug Mode:",
-  "config.roughlyenoughitems.search.debugSearchTimeRequired": "Search Debug Mode:",
-  "config.roughlyenoughitems.accessibility.resizeDynamically": "Resize Dynamically:",
-  "config.roughlyenoughitems.layout.searchFieldLocation": "Search Field Position:",
-  "config.roughlyenoughitems.layout.searchFieldLocation.bottom_side": "Bottom Left / Right",
-  "config.roughlyenoughitems.layout.searchFieldLocation.top_side": "Top Left / Right",
-  "config.roughlyenoughitems.layout.searchFieldLocation.center": "Middle",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent": "Scrollbar Fade:",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.true": "Never",
-  "config.roughlyenoughitems.accessibility.compositeScrollBarPermanent.boolean.false": "When Inactive",
-  "config.roughlyenoughitems.disableRecipeBook": "Vanilla Recipe Book:",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cNo",
-  "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aYes",
-  "config.roughlyenoughitems.leftSideMobEffects": "Mob Effects Position:",
-  "config.roughlyenoughitems.leftSideMobEffects.boolean.true": "Left",
-  "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Right (Vanilla)",
-  "config.roughlyenoughitems.fixTabCloseContainer": "Fix Vanilla Tab Container (When Recipe Book Disabled):",
-  "config.roughlyenoughitems.lighterButtonHover": "Lighter Button Hover:",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Craftable Filter:",
-  "config.roughlyenoughitems.layout.showUtilsButtons": "Utils Buttons:",
-  "config.roughlyenoughitems.commands.gamemodeCommand": "Game Mode Command:",
-  "config.roughlyenoughitems.commands.giveCommand": "Give Command:",
-  "config.roughlyenoughitems.commands.timeCommand": "Time Command:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "Load Default Plugin:",
-  "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cNo (Dangerous)",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "REI Reload Thread:",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.true": "REI Thread",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.false": "§cPacket Thread",
-  "config.roughlyenoughitems.commands.weatherCommand": "Weather Command:",
-  "config.roughlyenoughitems.layout.entryPanelOrdering": "Entry Panel Ordering:",
-  "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
-  "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "Faster Entry Rendering:",
-  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "Caching Entry Rendering:",
-  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "This option will improve performance for rendering entries for up to 5x, with an average of 2.5x performance gain. However, this will break enchantment glints and animated textures.",
-  "config.roughlyenoughitems.miscellaneous.cachingDisplayLookup": "Caching Display Lookup:",
-  "config.roughlyenoughitems.itemCheatingMode": "Item Cheating Amount:",
-  "config.roughlyenoughitems.itemCheatingMode.rei_like": "Normal",
-  "config.roughlyenoughitems.itemCheatingMode.jei_like": "Inverted",
-  "config.roughlyenoughitems.search.searchFavorites": "Search Filter in Favorites:",
-  "config.roughlyenoughitems.tooltips.appendModNames": "Append Mod Names:",
-  "config.roughlyenoughitems.tooltips.displayFavoritesTooltip": "Append Favorites Hint:",
-  "config.roughlyenoughitems.accessibility.snapToRows": "Entry Panel Snap Rows:",
-  "config.roughlyenoughitems.accessibility.toastDisplayedOnCopyIdentifier": "Copy Identifier Toast:",
-  "config.roughlyenoughitems.scrollingEntryListWidget": "Entry List Action:",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.true": "Scrolled",
-  "config.roughlyenoughitems.scrollingEntryListWidget.boolean.false": "Paginated",
-  "config.roughlyenoughitems.hideEntryPanelIfIdle": "Entry List When Not Searching:",
-  "config.roughlyenoughitems.hideEntryPanelIfIdle.boolean.true": "Invisible",
-  "config.roughlyenoughitems.hideEntryPanelIfIdle.boolean.false": "Visible",
-  "config.roughlyenoughitems.horizontalEntriesBoundaries": "Horizontal Entries Boundaries:",
-  "config.roughlyenoughitems.verticalEntriesBoundaries": "Vertical Entries Boundaries:",
-  "config.roughlyenoughitems.horizontalEntriesBoundariesColumns": "Entries Columns Limit:",
-  "config.roughlyenoughitems.verticalEntriesBoundariesRows": "Entries Rows Limit:",
-  "config.roughlyenoughitems.favoritesHorizontalEntriesBoundaries": "Horizontal Favorites Boundaries:",
-  "config.roughlyenoughitems.favoritesHorizontalEntriesBoundariesColumns": "Favorites Columns Limit:",
-  "config.roughlyenoughitems.syntaxHighlightingMode": "Syntax Highlighting Mode:",
-  "config.roughlyenoughitems.syntaxHighlightingMode.config": "%s",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain": "Plain",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "Plain (Underscored)",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Colorful",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Colorful (Underscored)",
-  "config.roughlyenoughitems.isFocusModeZoomed": "Entry Focus Mode:",
-  "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Zoomed",
-  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Highlighted",
-  "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Should Filter Displays:",
-  "config.roughlyenoughitems.configureCategories": "Configure Categories...",
-  "config.roughlyenoughitems.configureCategories.title": "Configuring Categories",
-  "config.roughlyenoughitems.configureCategories.visibility.true": "Enabled",
-  "config.roughlyenoughitems.configureCategories.visibility.false": "Disabled",
-  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.title": "Configuring Quick Craft Categories",
-  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.toggle": "Toggle",
-  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.true": "Available for Quick Craft",
-  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.false": "Excluded from Quick Craft",
-  "config.roughlyenoughitems.filteringScreen": "Customized Filtering",
-  "config.roughlyenoughitems.filteringRulesScreen": "Customized Filtering Rules",
-  "config.roughlyenoughitems.filteringRulesScreen.new": "Create Filtering Rule",
-  "config.roughlyenoughitems.filteringRulesScreen.delete": "Delete",
-  "config.roughlyenoughitems.filteringRulesScreen.hint": "Try Dragging!",
-  "rule.roughlyenoughitems.filtering.manual": "Manual Filtering",
-  "rule.roughlyenoughitems.filtering.manual.subtitle": "Manually select what to hide and show.",
-  "rule.roughlyenoughitems.filtering.search": "Search Filtering",
-  "rule.roughlyenoughitems.filtering.search.subtitle": "Filter using search filters.",
-  "rule.roughlyenoughitems.filtering.search.filter": "Search Filter:",
-  "rule.roughlyenoughitems.filtering.search.show": "Show / Hide:",
-  "rule.roughlyenoughitems.filtering.search.show.true": "Show",
-  "rule.roughlyenoughitems.filtering.search.show.false": "Hide",
-  "rule.roughlyenoughitems.filtering.basic": "Basic Plugin Filtering",
-  "rule.roughlyenoughitems.filtering.basic.subtitle": "Filter entries by REI plugins. This is not configurable here.",
-  "rule.roughlyenoughitems.filtering.hide.tag": "Tag Filtering",
-  "rule.roughlyenoughitems.filtering.hide.tag.subtitle": "Filter entries by 'c:hidden_from_recipe_viewers'. This is not configurable here.",
-  "language.roughlyenoughitems.english": "English",
-  "language.roughlyenoughitems.japanese": "Japanese",
-  "language.roughlyenoughitems.chinese_simplified": "Chinese Simplified",
-  "language.roughlyenoughitems.chinese_traditional": "Chinese Traditional",
-  "language.roughlyenoughitems.chinese_traditional_hong_kong": "Chinese Traditional, Hong Kong",
-  "language.roughlyenoughitems.french": "French",
-  "language.roughlyenoughitems.german": "German",
-  "language.roughlyenoughitems.estonian": "Estonian",
-  "language.roughlyenoughitems.portuguese": "Portuguese",
-  "language.roughlyenoughitems.portuguese_brazilian": "Portuguese, Brazilian",
-  "language.roughlyenoughitems.lolcat": "LOLCAT",
-  "language.roughlyenoughitems.upside_down_english": "Upside Down English",
-  "language.roughlyenoughitems.bulgarian": "Bulgarian",
-  "language.roughlyenoughitems.russian": "Russian",
-  "language.roughlyenoughitems.polish": "Polish",
-  "language.roughlyenoughitems.norwegian": "Norwegian",
-  "language.roughlyenoughitems.turkish": "Turkish",
-  "language.roughlyenoughitems.ukrainian": "Ukrainian",
-  "language.roughlyenoughitems.spanish": "Spanish",
-  "language.roughlyenoughitems.italian": "Italian",
-  "language.roughlyenoughitems.czech": "Czech",
-  "language.roughlyenoughitems.danish": "Danish",
-  "language.roughlyenoughitems.hebrew": "Hebrew"
+  "config.rei.categories.appearance": "Appearance",
+  "config.rei.categories.keybinds": "Keybinds",
+  "config.rei.categories.cheats": "Cheats",
+  "config.rei.categories.layout": "Layout",
+  "config.rei.categories.accessibility": "Accessibility",
+  "config.rei.categories.favorites": "Favorites",
+  "config.rei.categories.performance": "Performance",
+  "config.rei.categories.search": "Search",
+  "config.rei.categories.filtering": "Filtering",
+  "config.rei.categories.list": "List",
+  "config.rei.categories.debug": "Debug",
+  "config.rei.categories.reset": "Reload & Reset",
+  "config.rei.options.cheating_mode": "Cheating Mode",
+  "config.rei.options.favorites": "Favorites",
+  "config.rei.options.reduced_motion": "Reduced Motion",
+  "config.rei.options.reduced_motion.desc": "Disables animation for transitions, menus, hover states, to minimize discomfort caused by vestibular motion triggers.",
+  "config.rei.options.cheating_style": "Cheating Style",
+  "config.rei.options.display_screen_type": "Display Screen Style",
+  "config.rei.options.theme": "Theme",
+  "config.rei.options.theme.desc": "The global theme of Roughly Enough Items. This will be applied everywhere, including background, buttons, etc.",
+  "config.rei.options.search_field_location": "Search Field",
+  "config.rei.options.config_button_location": "Config Button",
+  "config.rei.options.craftable_filter": "Craftable Filter",
+  "config.rei.value.trueFalse.false": "False",
+  "config.rei.value.trueFalse.true": "True",
+  "config.rei.value.enabledDisabled.false": "Disabled",
+  "config.rei.value.enabledDisabled.true": "Enabled"
 }
