Added optional auto-hiding

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -23,6 +23,7 @@
   "text.rei.searching.step": "This is slower on the first search.\nProgress: %s%%",
   "text.rei.config.menu.dark_theme": "Dark Theme",
   "text.rei.config.menu.craftable_filter": "Craftable Filter",
+  "text.rei.config.menu.isAutoHideEnabled": "Auto Hide",
   "text.rei.config.menu.display": "Display Settings...",
   "text.rei.config.menu.display.remove_recipe_book": "Remove Recipe Book",
   "text.rei.config.menu.display.left_side_mob_effects": "Left Side Mob Effects",
@@ -324,6 +325,7 @@
   "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "This option will improve performance for rendering entries for up to 5x, with an average of 2.5x performance gain. However, this will break enchantment glints and animated textures.",
   "config.roughlyenoughitems.miscellaneous.cachingDisplayLookup": "Caching Display Lookup:",
   "config.roughlyenoughitems.itemCheatingMode": "Item Cheating Amount:",
+  "config.roughlyenoughitems.isAutoHideEnabled": "Auto Hide Enabled:",
   "config.roughlyenoughitems.itemCheatingMode.rei_like": "Normal",
   "config.roughlyenoughitems.itemCheatingMode.jei_like": "Inverted",
   "config.roughlyenoughitems.search.searchFavorites": "Search Filter in Favorites:",
