Add flags and reset

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -88,7 +88,7 @@
   "text.rei.input.methods.default": "Default",
   "text.rei.input.methods.default.description": "The default input method. This does not transform the search term.",
   "text.rei.input.methods.jyutping": "Jyutping (Cantonese)",
-  "text.rei.input.methods.jyutping.description": "The input method for matching Chinese characters with Jyutping (Cantonese).", 
+  "text.rei.input.methods.jyutping.description": "The input method for matching Chinese characters with Jyutping (Cantonese).",
   "text.rei.input.methods.pinyin": "Pinyin (Mandarin)",
   "text.rei.input.methods.pinyin.description": "The input method for matching Chinese characters with Pinyin (Mandarin).",
   "text.rei.input.methods.pinyin.fuzzy.matching": "Fuzzy Matching...",
@@ -241,6 +241,7 @@
   "config.rei.categories.filtering": "Filtering",
   "config.rei.categories.list": "List",
   "config.rei.categories.debug": "Debug",
+  "config.rei.categories.flags": "Feature Flags",
   "config.rei.categories.reset": "Reload & Reset",
   "config.rei.options.cheating_mode": "Cheating Mode",
   "config.rei.options.favorites": "Favorites",
