Add the options

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -243,17 +243,135 @@
   "config.rei.categories.debug": "Debug",
   "config.rei.categories.flags": "Feature Flags",
   "config.rei.categories.reset": "Reload & Reset",
-  "config.rei.options.cheating_mode": "Cheating Mode",
-  "config.rei.options.favorites": "Favorites",
-  "config.rei.options.reduced_motion": "Reduced Motion",
-  "config.rei.options.reduced_motion.desc": "Disables animation for transitions, menus, hover states, to minimize discomfort caused by vestibular motion triggers.",
-  "config.rei.options.cheating_style": "Cheating Style",
-  "config.rei.options.display_screen_type": "Display Screen Style",
-  "config.rei.options.theme": "Theme",
-  "config.rei.options.theme.desc": "The global theme of Roughly Enough Items. This will be applied everywhere, including background, buttons, etc.",
-  "config.rei.options.search_field_location": "Search Field",
-  "config.rei.options.config_button_location": "Config Button",
-  "config.rei.options.craftable_filter": "Craftable Filter",
+  "config.rei.options.groups.appearance.interface": "Interface",
+  "config.rei.options.appearance.theme": "Theme",
+  "config.rei.options.appearance.theme.desc": "The global theme of Roughly Enough Items. This will be applied everywhere, including background, buttons, etc.",
+  "config.rei.options.appearance.recipe_border": "Recipe Border",
+  "config.rei.options.appearance.recipe_border.desc": "The border of each recipe. Default is the preferred REI look.",
+  "config.rei.options.appearance.reduced_motion": "Reduced Motion",
+  "config.rei.options.appearance.reduced_motion.desc": "Disables animation for transitions, menus, hover states, to minimize discomfort caused by vestibular motion triggers.",
+  "config.rei.options.appearance.recipe_lookup_style": "Recipe Lookup Style",
+  "config.rei.options.appearance.recipe_lookup_style.desc": "The style of how recipes are displayed. Default is for the more classic look, while Composite is for the more informative, villger-like look.",
+  "config.rei.options.groups.appearance.tooltips": "Tooltips",
+  "config.rei.options.appearance.append_mod_names": "Append Mod Names",
+  "config.rei.options.appearance.append_mod_names.desc": "Appends the containing namespace for entries. The appended line will be in italisised light blue.",
+  "config.rei.options.appearance.append_favorites_hint": "Append Favorites Hint",
+  "config.rei.options.appearance.append_favorites_hint.desc": "Shows a hint on how to favorite an entry, or a recipe.",
+  "config.rei.options.groups.keybinds.keybinds": "Keybinds",
+  "config.rei.options.groups.keybinds.advanced": "Advanced",
+  "config.rei.options.keybinds.use_native_keybinds": "Use Native Keybinds",
+  "config.rei.options.keybinds.use_native_keybinds.desc": "Instead of listing the keybindings in this configuration menu, create vanilla Minecraft-like keybinds in the Controls screen. Restarting Minecraft is required to disable this option.\nNote that Minecraft-like keybinds suffer from conflicts and lack of support for modifier keys (Fabric).",
+  "config.rei.options.groups.cheats.cheats": "Cheats",
+  "config.rei.options.cheats.mode": "Mode",
+  "config.rei.options.cheats.mode.desc": "Cheats mode allows you to grab items from the side. This requires operator permission. The /give command would be used as a fallback if REI is not installed on the server.",
+  "config.rei.options.cheats.method": "Method",
+  "config.rei.options.cheats.method.desc": "The way how cheating is achieved. Grab mode places the cheated item at your cursor, while give mode places the cheated item in your inventory.",
+  "config.rei.options.cheats.amount": "Amount",
+  "config.rei.options.cheats.amount.desc": "The amount of items cheated. By default, REI cheats 1 item and a stack when clicked with shift.",
+  "config.rei.options.groups.cheats.advanced": "Advanced",
+  "config.rei.options.cheats.give_command": "Give Command",
+  "config.rei.options.cheats.give_command.desc": "The command invoked to cheat items when REI is not installed on the server. This may be useful if the server replaced the default /give command. Available placeholders: {item_name}, {item_identifier}, {count} and {player_name}.",
+  "config.rei.options.groups.layout.widgets": "Widgets",
+  "config.rei.options.layout.search_field_location": "Search Field Location",
+  "config.rei.options.layout.search_field_location.desc": "The location of the search field. By default, the search field is placed at the bottom center, which automatically moves to the side to make way for tall container screens.",
+  "config.rei.options.layout.config_button_location": "Config Button Location",
+  "config.rei.options.layout.config_button_location.desc": "The location of the configuration button. By default, it is placed next to the search field. However, this can be changed to look like the legacy versions of REI, where it is placed on the top side of the screen.",
+  "config.rei.options.layout.craftable_filter": "Craftable Filter",
+  "config.rei.options.layout.craftable_filter.desc": "Craftable Filter allows you to view stacks currently craftable with the ingredients in your inventory. This can be useful alongside the Ctrl+Click quick craft feature to craft quickly.",
+  "config.rei.options.groups.layout.panel": "Panel",
+  "config.rei.options.layout.boundaries": "Boundaries",
+  "config.rei.options.layout.boundaries.desc": "Declare the boundaries of the panel. Useful to limit the columns / rows displayed on screen.",
+  "config.rei.options.groups.accessibility.display": "Display",
+  "config.rei.options.accessibility.larger_tabs": "Larger Tabs",
+  "config.rei.options.accessibility.larger_tabs.desc": "Increase the size of tabs in recipe viewing screens.",
+  "config.rei.options.accessibility.larger_arrow_buttons": "Larger Arrow Buttons",
+  "config.rei.options.accessibility.larger_arrow_buttons.desc": "Increase the size of pages switching buttons next to tabs in recipe viewing screens.",
+  "config.rei.options.groups.accessibility.widgets": "Widgets",
+  "config.rei.options.accessibility.scrollbar_visibility": "Scrollbar Visibility",
+  "config.rei.value.accessibility.scrollbar_visibility.always": "Always Visible",
+  "config.rei.value.accessibility.scrollbar_visibility.when_scrolling": "When Scrolling",
+  "config.rei.value.accessibility.scrollbar_visibility.never": "Always Invisible",
+  "config.rei.options.accessibility.clickable_recipe_arrows": "Clickable Recipe Arrows",
+  "config.rei.options.accessibility.clickable_recipe_arrows.desc": "Click on recipe arrows to see all recipes in the target category.",
+  "config.rei.options.groups.favorites.favorites": "Favorites",
+  "config.rei.options.favorites.mode": "Mode",
+  "config.rei.options.favorites.mode.desc": "Favorite different entries on the opposite side of the entry panel. The favorites are persistent across reloads, and act as a quick access to things you are working on.\nSimply press \"A\", or drag and drop entries to add / remove an entry from favorites.",
+  "config.rei.options.favorites.new_favorites_button_visibility": "New Favorites Button Visibility",
+  "config.rei.options.favorites.new_favorites_button_visibility.desc": "The visibility of the new favorites button on the bottom side of the panel.",
+  "config.rei.value.favorites.new_favorites_button_visibility.always_visible": "Always Visible",
+  "config.rei.value.favorites.new_favorites_button_visibility.auto_hide": "When Active",
+  "config.rei.value.favorites.new_favorites_button_visibility.always_invisible": "Always Invisible",
+  "config.rei.options.groups.favorites.advanced": "Advanced",
+  "config.rei.options.favorites.game_mode_command": "Game Mode Command",
+  "config.rei.options.favorites.game_mode_command.desc": "The command invoked to change the gamemode. This may be useful if the server replaced the default /gamemode command. Available placeholders: {gamemode}.",
+  "config.rei.options.favorites.time_command": "Time Command",
+  "config.rei.options.favorites.time_command.desc": "The command invoked to change the time. This may be useful if the server replaced the default /time command. Available placeholders: {time}.",
+  "config.rei.options.favorites.weather_command": "Weather Command",
+  "config.rei.options.favorites.weather_command.desc": "The command invoked to change the weather. This may be useful if the server replaced the default /weather command. Available placeholders: {weather}.",
+  "config.rei.options.groups.performance.rendering": "Rendering",
+  "config.rei.options.performance.batched_rendering": "Batched Rendering",
+  "config.rei.options.performance.batched_rendering.desc": "Batched Rendering decreases the amount of individual calls, and improves performances where many entries are visible at one time.",
+  "config.rei.options.performance.cached_rendering": "Cached Rendering",
+  "config.rei.options.performance.cached_rendering.desc": "Cached Rendering pre-renders entries and avoids rendering the entries again. This will make animated entries appear static, but will drastically improve performance by 3x-5x.",
+  "config.rei.options.groups.performance.reload": "Reload",
+  "config.rei.options.performance.reload_thread": "Reload Thread",
+  "config.rei.options.performance.reload_thread.desc": "By using its own thread by default for reloading, this prevents soft-locking the game until everything is loaded in.",
+  "config.rei.values.performance.reload_thread.main_thread": "Main Thread (Blocking)",
+  "config.rei.values.performance.reload_thread.rei_thread": "REI Thread",
+  "config.rei.options.performance.cached_display_lookup": "Cached Display Lookup",
+  "config.rei.options.performance.cached_display_lookup.desc": "Cached Display Lookup reduces the time when looking up a display. This stores the inputs and outputs of a display ahead of time.",
+  "config.rei.options.groups.search.appearance": "Appearance",
+  "config.rei.options.search.syntax_highlighting": "Syntax Highlighting",
+  "config.rei.options.search.syntax_highlighting.desc": "Displays different search filters in different colors for easier identification.",
+  "config.rei.options.groups.search.filters": "Filters",
+  "config.rei.options.search.mod_search": "Mod Search",
+  "config.rei.options.search.mod_search.desc": "Filter entries by its containing mod §l%s§r.",
+  "config.rei.options.search.tooltip_search": "Tooltip Search",
+  "config.rei.options.search.tooltip_search.desc": "Filter entries by contents of its tooltip §l%s§r. This is useful for searching through details of the entry, for example, enchantments.",
+  "config.rei.options.search.tag_search": "Tag Search",
+  "config.rei.options.search.tag_search.desc": "Filter entries by the tags it is contained in §l%s§r.",
+  "config.rei.options.search.identifier_search": "Identifier Search",
+  "config.rei.options.search.identifier_search.desc": "Filter entries by its identifier §l%s§r.",
+  "config.rei.options.groups.search.advanced": "Advanced",
+  "config.rei.options.search.async_search": "Async Search",
+  "config.rei.options.search.async_search.desc": "Parallelize search with multiple threads. This usually improves performance and \"snappiness\" of search.",
+  "config.rei.options.search.async_search.mode": "Mode",
+  "config.rei.options.search.async_search.partition_size": "Partition Size",
+  "config.rei.options.search.async_search.patch_thread_crash": "Patch Thread Crash",
+  "config.rei.options.groups.filtering.filtering": "Filtering",
+  "config.rei.options.filtering.customized_filtering": "Customized Filtering",
+  "config.rei.options.filtering.customized_filtering.desc": "Create filtering rules to hide / show specific entries from the entry list.",
+  "config.rei.options.groups.filtering.advanced": "Advanced",
+  "config.rei.options.filtering.filter_displays": "Filter Displays",
+  "config.rei.options.filtering.filter_displays.desc": "Apply filtering rules to determine the visibility of displays. Displays with all entries filtered will be hidden.",
+  "config.rei.options.groups.list.entries": "Entries",
+  "config.rei.options.list.display_mode": "Display Mode",
+  "config.rei.options.list.display_mode.desc": "The way entries are laid out. Paginated mode displays entries in pages, where there are buttons to traverse the different pages. Scrolled mode displays entries in a vertical list.",
+  "config.rei.value.list.display_mode.scrolled": "Scrolled",
+  "config.rei.value.list.display_mode.paginated": "Paginated",
+  "config.rei.options.list.ordering": "Ordering",
+  "config.rei.options.list.ordering.desc": "The method the entries are sorted by. By default, REI follows the order in which entries are registered into the game. This can be changed to mimic the creative tabs or the direction of the sorting.",
+  "config.rei.options.list.zoom": "Zoom",
+  "config.rei.options.list.zoom.desc": "The size of the entries. Increasing the zoom amount may also improve performance as less entries are on the screen at the same time.",
+  "config.rei.options.list.focus_mode": "Focus Mode",
+  "config.rei.options.list.focus_mode.desc": "How the focus state of the entries will be presented. By default, REI follows vanilla and highlights the slot.",
+  "config.rei.value.list.focus_mode.highlighted": "Highlighted",
+  "config.rei.value.list.focus_mode.zoomed": "Zoomed",
+  "config.rei.options.groups.debug.performance": "Performance",
+  "config.rei.options.debug.plugins_performance": "Plugins Performance",
+  "config.rei.options.debug.plugins_performance.desc": "Detailed break-down of plugins' reload times. This is very useful in debugging the performance after loaded into a world.",
+  "config.rei.options.debug.search_performance": "Search Performance",
+  "config.rei.options.debug.search_performance.desc": "Verbose console print out for analysing search performance.",
+  "config.rei.options.debug.entry_list_performance": "Entry List Performance",
+  "config.rei.options.debug.entry_list_performance.desc": "Display the time used to render entries on the entry list.",
+  "config.rei.options.groups.reset.reload": "Reload",
+  "config.rei.options.reset.reload_plugins": "Reload Plugins",
+  "config.rei.options.reset.reload_plugins.desc": "Resets the current loaded data and reload all data and plugins.",
+  "config.rei.options.reset.reload_search": "Reload Search",
+  "config.rei.options.reset.reload_search.desc": "Resets all cache around search. The search cache will rebuild before the first search after reloading.",
+  "config.rei.options.groups.reset.reset": "Reset",
+  "config.rei.options.reset.reset_all_options": "Reset All Options",
+  "config.rei.options.reset.reset_all_options.desc": "This is an extremely destructive operation. This resets all REI options as the factory state, and cannot be reversed.",
   "config.rei.value.trueFalse.false": "False",
   "config.rei.value.trueFalse.true": "True",
   "config.rei.value.enabledDisabled.false": "Disabled",
