--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -246,12 +246,19 @@
   "config.rei.options.groups.appearance.interface": "Interface",
   "config.rei.options.appearance.theme": "Theme",
   "config.rei.options.appearance.theme.desc": "The global theme of Roughly Enough Items. This will be applied everywhere, including background, buttons, etc.",
+  "config.rei.value.appearance.theme.light": "Light",
+  "config.rei.value.appearance.theme.dark": "Dark",
   "config.rei.options.appearance.recipe_border": "Recipe Border",
   "config.rei.options.appearance.recipe_border.desc": "The border of each recipe. Default is the preferred REI look.",
+  "config.rei.value.appearance.recipe_border.default": "Default",
+  "config.rei.value.appearance.recipe_border.lighter": "Lighter",
+  "config.rei.value.appearance.recipe_border.none": "Invisible",
   "config.rei.options.appearance.reduced_motion": "Reduced Motion",
   "config.rei.options.appearance.reduced_motion.desc": "Disables animation for transitions, menus, hover states, to minimize discomfort caused by vestibular motion triggers.",
   "config.rei.options.appearance.recipe_lookup_style": "Recipe Lookup Style",
-  "config.rei.options.appearance.recipe_lookup_style.desc": "The style of how recipes are displayed. Default is for the more classic look, while Composite is for the more informative, villger-like look.",
+  "config.rei.options.appearance.recipe_lookup_style.desc": "The style of how recipes are displayed. Classic is the default look, while Composite is for the more informative, villger-like look.",
+  "config.rei.value.appearance.recipe_lookup_style.original": "Classic",
+  "config.rei.value.appearance.recipe_lookup_style.composite": "Composite",
   "config.rei.options.groups.appearance.tooltips": "Tooltips",
   "config.rei.options.appearance.append_mod_names": "Append Mod Names",
   "config.rei.options.appearance.append_mod_names.desc": "Appends the containing namespace for entries. The appended line will be in italisised light blue.",
@@ -264,23 +271,40 @@
   "config.rei.options.groups.cheats.cheats": "Cheats",
   "config.rei.options.cheats.mode": "Mode",
   "config.rei.options.cheats.mode.desc": "Cheats mode allows you to grab items from the side. This requires operator permission. The /give command would be used as a fallback if REI is not installed on the server.",
+  "config.rei.value.cheats.mode.when_creative": "When Creative",
   "config.rei.options.cheats.method": "Method",
   "config.rei.options.cheats.method.desc": "The way how cheating is achieved. Grab mode places the cheated item at your cursor, while give mode places the cheated item in your inventory.",
+  "config.rei.value.cheats.method.grab": "Grab",
+  "config.rei.value.cheats.method.give": "Give",
   "config.rei.options.cheats.amount": "Amount",
   "config.rei.options.cheats.amount.desc": "The amount of items cheated. By default, REI cheats 1 item and a stack when clicked with shift.",
+  "config.rei.value.cheats.amount.default": "Default",
+  "config.rei.value.cheats.amount.reversed": "Reversed",
   "config.rei.options.groups.cheats.advanced": "Advanced",
   "config.rei.options.cheats.give_command": "Give Command",
   "config.rei.options.cheats.give_command.desc": "The command invoked to cheat items when REI is not installed on the server. This may be useful if the server replaced the default /give command. Available placeholders: {item_name}, {item_identifier}, {count} and {player_name}.",
   "config.rei.options.groups.layout.widgets": "Widgets",
   "config.rei.options.layout.search_field_location": "Search Field Location",
   "config.rei.options.layout.search_field_location.desc": "The location of the search field. By default, the search field is placed at the bottom center, which automatically moves to the side to make way for tall container screens.",
+  "config.rei.value.layout.search_field_location.center": "Center",
+  "config.rei.value.layout.search_field_location.bottom_left": "Bottom Left",
+  "config.rei.value.layout.search_field_location.bottom_right": "Bottom Right",
+  "config.rei.value.layout.search_field_location.top_left": "Top Left",
+  "config.rei.value.layout.search_field_location.top_right": "Top Right",
   "config.rei.options.layout.config_button_location": "Config Button Location",
   "config.rei.options.layout.config_button_location.desc": "The location of the configuration button. By default, it is placed next to the search field. However, this can be changed to look like the legacy versions of REI, where it is placed on the top side of the screen.",
+  "config.rei.value.layout.config_button_location.next_to_search": "Next to Search Field",
+  "config.rei.value.layout.config_button_location.top_left": "Top Left",
+  "config.rei.value.layout.config_button_location.top_right": "Top Right",
   "config.rei.options.layout.craftable_filter": "Craftable Filter",
   "config.rei.options.layout.craftable_filter.desc": "Craftable Filter allows you to view stacks currently craftable with the ingredients in your inventory. This can be useful alongside the Ctrl+Click quick craft feature to craft quickly.",
   "config.rei.options.groups.layout.panel": "Panel",
   "config.rei.options.layout.boundaries": "Boundaries",
   "config.rei.options.layout.boundaries.desc": "Declare the boundaries of the panel. Useful to limit the columns / rows displayed on screen.",
+  "config.rei.options.layout.location": "Location",
+  "config.rei.options.layout.location.desc": "Change the location of the panel. The entire REI setup may be mirrored horizontally, including the list and all widgets.",
+  "config.rei.value.layout.location.left": "Left",
+  "config.rei.value.layout.location.right": "Right",
   "config.rei.options.groups.accessibility.display": "Display",
   "config.rei.options.accessibility.larger_tabs": "Larger Tabs",
   "config.rei.options.accessibility.larger_tabs.desc": "Increase the size of tabs in recipe viewing screens.",
@@ -323,6 +347,10 @@
   "config.rei.options.groups.search.appearance": "Appearance",
   "config.rei.options.search.syntax_highlighting": "Syntax Highlighting",
   "config.rei.options.search.syntax_highlighting.desc": "Displays different search filters in different colors for easier identification.",
+  "config.rei.value.search.syntax_highlighting.plain": "Plain",
+  "config.rei.value.search.syntax_highlighting.plain_underscored": "Underscored",
+  "config.rei.value.search.syntax_highlighting.colorful": "Colorful",
+  "config.rei.value.search.syntax_highlighting.colorful_underscored": "Colorful & Underscored",
   "config.rei.options.groups.search.filters": "Filters",
   "config.rei.options.search.mod_search": "Mod Search",
   "config.rei.options.search.mod_search.desc": "Filter entries by its containing mod §l%s§r.",
@@ -332,6 +360,9 @@
   "config.rei.options.search.tag_search.desc": "Filter entries by the tags it is contained in §l%s§r.",
   "config.rei.options.search.identifier_search": "Identifier Search",
   "config.rei.options.search.identifier_search.desc": "Filter entries by its identifier §l%s§r.",
+  "config.rei.value.search.filters.always": "Always Active",
+  "config.rei.value.search.filters.prefix": "Activate with Prefix",
+  "config.rei.value.search.filters.never": "Always Inactive",
   "config.rei.options.groups.search.advanced": "Advanced",
   "config.rei.options.search.async_search": "Async Search",
   "config.rei.options.search.async_search.desc": "Parallelize search with multiple threads. This usually improves performance and \"snappiness\" of search.",
@@ -351,6 +382,12 @@
   "config.rei.value.list.display_mode.paginated": "Paginated",
   "config.rei.options.list.ordering": "Ordering",
   "config.rei.options.list.ordering.desc": "The method the entries are sorted by. By default, REI follows the order in which entries are registered into the game. This can be changed to mimic the creative tabs or the direction of the sorting.",
+  "config.rei.value.list.ordering.registry_ascending": "By Registry",
+  "config.rei.value.list.ordering.name_ascending": "By Name",
+  "config.rei.value.list.ordering.groups_ascending": "By Groups",
+  "config.rei.value.list.ordering.registry_descending": "By Registry (Descending)",
+  "config.rei.value.list.ordering.name_descending": "By Name (Descending)",
+  "config.rei.value.list.ordering.groups_descending": "By Groups (Descending)",
   "config.rei.options.list.zoom": "Zoom",
   "config.rei.options.list.zoom.desc": "The size of the entries. Increasing the zoom amount may also improve performance as less entries are on the screen at the same time.",
   "config.rei.options.list.focus_mode": "Focus Mode",
