--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -265,6 +265,19 @@
   "config.rei.options.appearance.append_favorites_hint": "Append Favorites Hint",
   "config.rei.options.appearance.append_favorites_hint.desc": "Shows a hint on how to favorite an entry, or a recipe.",
   "config.rei.options.groups.keybinds.keybinds": "Keybinds",
+  "config.rei.options.keybinds.recipe": "View Recipes",
+  "config.rei.options.keybinds.usage": "View Usages",
+  "config.rei.options.keybinds.hide": "Show / Hide REI",
+  "config.rei.options.keybinds.previous_page": "Navigate to Previous Page",
+  "config.rei.options.keybinds.next_page": "Navigate to Next Page",
+  "config.rei.options.keybinds.focus_search": "Focus Search Field",
+  "config.rei.options.keybinds.copy_recipe_id": "Copy Recipe Identifier",
+  "config.rei.options.keybinds.copy_recipe_id.desc": "Copy a recipe's identifier by pressing the keybind, while hovering over a recipe's info button (shown with \"+\", or \"?\").",
+  "config.rei.options.keybinds.favorite": "Favorite Entry",
+  "config.rei.options.keybinds.export_image": "Export Image",
+  "config.rei.options.keybinds.export_image.desc": "Export a recipe as an image by pressing the keybind, while hovering over a recipe.",
+  "config.rei.options.keybinds.back": "Back",
+  "config.rei.options.keybinds.back.desc": "Quickly navigate back to the previous recipes by pressing the keybind.",
   "config.rei.options.groups.keybinds.advanced": "Advanced",
   "config.rei.options.keybinds.use_native_keybinds": "Use Native Keybinds",
   "config.rei.options.keybinds.use_native_keybinds.desc": "Instead of listing the keybindings in this configuration menu, create vanilla Minecraft-like keybinds in the Controls screen. Restarting Minecraft is required to disable this option.\nNote that Minecraft-like keybinds suffer from conflicts and lack of support for modifier keys (Fabric).",
